# trickline

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: pages.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 495c4b371484_initial_schema.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py  security.py  storage.py
backend/app/routers/: auth.py  comparisons.py  videos.py
docs/: appstore-expansion.md  feature_requests.md  poc-distribution.md  requirements.md  video-processing-spikes.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/media/: videoUtils.ts
frontend/src/mvp/: MvpConsole.tsx
frontend/src/spike/: CompareSpike.tsx  TimerCamera.tsx  VideoLibrary.tsx  usePoseOverlay.ts  useSyncedPlayers.ts  useTimerCamera.ts  useVideoLibrary.ts  useZoomPan.ts
frontend/src/storage/: index.ts  indexedDbStorage.ts  types.ts
sample_movies/: 20260620-162326_e1kkKy.MOV  20260620-163628_yHJC8a.MOV
spike/pose_spike/: pose_spike.py
tools/: make-proxy.sh  make-side-by-side.sh
